[package]
name = "preers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "preers"
path = "src/bin/preers/main.rs"

[[bin]]
name = "preers-ctl"
path = "src/bin/preers-ctl/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0", features = ["dns", "serde", "autonat", "dcutr", "ed25519", "identify", "macros", "ping", "quic", "relay", "rendezvous", "tokio", "yamux", "tcp", "noise"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
libp2p-stream = "0.2.0-alpha"
quick-protobuf-codec = "0.3.1"
quick-protobuf = "0.8.1"
asynchronous-codec = "0.7.0"
futures = "0.3.31"
tokio-util = { version = "0.7.12", features = ["compat"] }
pin-project = "1.1.7"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6.1", features = ["set-header"] }
